--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -10,194 +10,423 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 172738
+  num-edges: 233202
+  node-degrees:
+    1: 71437
+    2: 32737
+    3: 17913
+    4: 11096
+    5: 7750
+    6: 5452
+    7: 4082
+    8: 3156
+    9: 2559
+    10: 2122
+    11: 1677
+    12: 1420
+    13: 1233
+    14: 961
+    15: 931
+    16: 777
+    17: 688
+    18: 616
+    19: 532
+    20: 503
+    21: 415
+    22: 407
+    23: 331
+    24: 308
+    25: 259
+    26: 238
+    27: 221
+    28: 203
+    29: 186
+    30: 161
+    31: 166
+    32: 121
+    33: 127
+    34: 122
+    35: 96
+    36: 103
+    37: 95
+    38: 95
+    39: 80
+    40: 65
+    41: 58
+    42: 78
+    43: 71
+    44: 55
+    45: 65
+    46: 53
+    47: 39
+    48: 40
+    49: 38
+    50: 44
+    51: 26
+    52: 43
+    53: 34
+    54: 36
+    55: 29
+    56: 29
+    57: 26
+    58: 27
+    59: 17
+    60: 26
+    61: 30
+    62: 12
+    63: 24
+    64: 9
+    65: 7
+    66: 10
+    67: 19
+    68: 12
+    69: 19
+    70: 13
+    71: 11
+    72: 11
+    73: 7
+    74: 6
+    75: 12
+    76: 9
+    77: 6
+    78: 9
+    79: 5
+    80: 12
+    81: 8
+    82: 3
+    83: 6
+    84: 4
+    85: 6
+    86: 7
+    87: 7
+    88: 7
+    89: 4
+    90: 7
+    91: 5
+    92: 6
+    93: 7
+    94: 3
+    95: 6
+    96: 6
+    97: 2
+    98: 3
+    99: 4
+    100: 5
+    101: 5
+    102: 1
+    103: 3
+    104: 4
+    105: 2
+    106: 2
+    107: 2
+    108: 3
+    109: 4
+    110: 5
+    111: 2
+    112: 1
+    113: 1
+    115: 2
+    116: 3
+    117: 2
+    118: 2
+    122: 3
+    123: 1
+    124: 3
+    125: 1
+    126: 1
+    127: 1
+    128: 4
+    129: 1
+    130: 1
+    132: 1
+    134: 1
+    135: 4
+    136: 2
+    137: 1
+    141: 1
+    142: 2
+    143: 2
+    148: 2
+    150: 3
+    152: 1
+    155: 1
+    156: 1
+    157: 2
+    159: 2
+    161: 2
+    165: 1
+    168: 1
+    173: 1
+    177: 1
+    178: 2
+    179: 1
+    187: 1
+    188: 1
+    190: 1
+    193: 1
+    202: 1
+    207: 1
+    216: 1
+    238: 2
+    241: 1
+    268: 1
+    271: 1
+    274: 1
+    285: 1
+    291: 1
+    294: 1
+    297: 1
+    300: 1
+    339: 1
+  edge-degrees:
+    2: 128075
+    3: 50279
+    4: 23325
+    5: 11871
+    6: 6756
+    7: 4152
+    8: 2642
+    9: 1665
+    10: 1131
+    11: 785
+    12: 565
+    13: 467
+    14: 286
+    15: 222
+    16: 161
+    17: 134
+    18: 109
+    19: 90
+    20: 85
+    21: 67
+    22: 49
+    23: 41
+    24: 32
+    25: 28
+    26: 22
+    27: 24
+    28: 17
+    29: 13
+    30: 14
+    31: 17
+    32: 9
+    33: 5
+    34: 3
+    35: 12
+    36: 8
+    37: 5
+    38: 3
+    39: 1
+    40: 4
+    41: 2
+    42: 3
+    43: 2
+    44: 2
+    46: 2
+    47: 1
+    48: 1
+    49: 2
+    50: 1
+    51: 2
+    52: 2
+    55: 2
+    58: 1
+    59: 1
+    67: 1
+    81: 1
+    82: 1
+    85: 1
 label-count:
-  India: 9963
-  El Salvador: 51
-  France: 5380
-  Czech Republic: 1293
-  USA: 15519
-  Australia: 5618
-  Romania: 975
-  Spain: 8654
-  Greece: 1669
-  United Kingdom: 8430
-  Chile: 1083
-  Sweden: 776
-  Netherlands: 2025
-  Italy: 9699
-  Argentina: 3716
-  South Africa: 1588
-  Brazil: 14921
-  Taiwan: 2028
-  Thailand: 3741
-  China: 801
-  Singapore: 431
-  South Korea: 945
-  Germany: 8269
-  Portugal: 2503
-  Malaysia: 3258
-  Japan: 10065
-  Turkey: 6186
-  Mexico: 5749
-  Hungary: 961
-  Canada: 2798
-  Poland: 3403
-  Austria: 1926
-  Russia: 2783
-  Switzerland: 1029
-  Colombia: 2281
-  Andorra: 118
-  Ireland: 863
-  Uruguay: 494
-  Israel: 695
-  Peru: 772
-  Bulgaria: 889
-  Denmark: 293
-  Iceland: 202
-  Puerto Rico: 144
-  Indonesia: 1183
-  Crimea: 200
-  New Zealand: 1855
-  Philippines: 2110
-  Morocco: 729
-  Laos: 21
-  Panama: 153
-  Vietnam: 832
-  Cyprus: 295
-  Norway: 292
-  Georgia: 150
-  Costa Rica: 389
-  Hong Kong: 536
-  Egypt: 531
-  Malta: 157
-  Belgium: 984
-  Kenya: 110
-  Serbia: 340
-  Lebanon: 63
-  French Polynesia: 45
-  Maldives: 110
-  Guatemala: 199
-  Sri Lanka: 137
-  Ukraine: 264
-  Venezuela: 75
-  Myanmar: 22
-  Slovakia: 266
-  Estonia: 158
-  Saudi Arabia: 196
-  Senegal: 17
-  Tunisia: 193
-  Pakistan: 2
-  Ecuador: 487
-  Qatar: 55
-  Armenia: 40
-  United Arab Emirates: 756
-  Dominican Republic: 375
-  Jamaica: 134
-  Slovenia: 213
-  Azerbaijan: 51
-  Cuba: 348
-  Bosnia and Herzegovina: 38
-  Cambodia: 107
-  Montenegro: 10
-  Luxembourg: 66
-  Monaco: 23
-  Oman: 70
-  Finland: 416
-  Croatia: 566
-  Turks and Caicos Islands: 29
-  Seychelles: 8
-  Latvia: 112
-  Algeria: 44
-  Jordan: 100
-  "R\xE9union": 44
-  Tanzania: 10
-  Bahamas: 61
-  Honduras: 63
   Albania: 22
-  Botswana: 2
-  Fiji: 74
-  Mauritius: 49
-  Ghana: 28
+  Algeria: 44
+  Andorra: 118
+  Argentina: 3716
+  Armenia: 40
   Aruba: 55
-  Cayman Islands: 2
-  Nepal: 34
-  Gibraltar: 19
-  Lithuania: 68
-  Kazakhstan: 17
-  Nigeria: 13
-  Republic of Macedonia: 31
-  New Caledonia: 20
-  Curacao: 27
-  Belarus: 72
-  Kyrgyzstan: 8
-  Guam: 12
-  Bolivia: 63
-  Cape Verde: 26
-  Vatican City: 23
-  Nicaragua: 30
-  Brunei: 9
-  Paraguay: 38
-  Namibia: 5
-  Saint Lucia: 3
-  Ethiopia: 21
-  Barbados: 11
-  Bermudas: 6
-  Iran: 23
-  Uganda: 6
-  San Marino: 10
-  Palestinian Territories: 14
+  Australia: 5618
+  Austria: 1926
+  Azerbaijan: 51
+  Bahamas: 61
   Bahrain: 22
   Bangladesh: 9
-  Madagascar: 1
-  Vanuatu: 5
+  Barbados: 11
+  Belarus: 72
+  Belgium: 984
   Belize: 7
-  Zimbabwe: 1
-  Mongolia: 1
-  Liechtenstein: 1
-  French Antilles: 2
-  Democratic Republic of Congo: 2
-  Dominica: 2
-  Guyana: 2
-  Uzbekistan: 2
-  Iraq: 1
-  Trinidad and Tobago: 1
-  Swaziland: 1
-  Moldova: 1
-  Mozambique: 2
-  Kuwait: 1
-  Syria: 1
-  The Gambia: 1
-  Sint Maarten: 1
+  Bermudas: 6
+  Bolivia: 63
+  Bosnia and Herzegovina: 38
+  Botswana: 2
+  Brazil: 14921
+  Brunei: 9
+  Bulgaria: 889
+  Cambodia: 107
+  Canada: 2798
+  Cape Verde: 26
+  Cayman Islands: 2
+  Chile: 1083
+  China: 801
+  Colombia: 2281
   Cook Islands: 1
-  Papua New Guinea: 1
+  Costa Rica: 389
+  Crimea: 200
+  Croatia: 566
+  Cuba: 348
+  Curacao: 27
+  Cyprus: 295
+  Czech Republic: 1293
+  Democratic Republic of Congo: 2
+  Denmark: 293
+  Dominica: 2
+  Dominican Republic: 375
+  Ecuador: 487
+  Egypt: 531
+  El Salvador: 51
+  Estonia: 158
+  Ethiopia: 21
+  Fiji: 74
+  Finland: 416
+  France: 5380
+  French Antilles: 2
   French Guiana: 1
-shape:
-  nodes: 172738
-  hyperedges: 233202
+  French Polynesia: 45
+  Georgia: 150
+  Germany: 8269
+  Ghana: 28
+  Gibraltar: 19
+  Greece: 1669
+  Guam: 12
+  Guatemala: 199
+  Guyana: 2
+  Honduras: 63
+  Hong Kong: 536
+  Hungary: 961
+  Iceland: 202
+  India: 9963
+  Indonesia: 1183
+  Iran: 23
+  Iraq: 1
+  Ireland: 863
+  Israel: 695
+  Italy: 9699
+  Jamaica: 134
+  Japan: 10065
+  Jordan: 100
+  Kazakhstan: 17
+  Kenya: 110
+  Kuwait: 1
+  Kyrgyzstan: 8
+  Laos: 21
+  Latvia: 112
+  Lebanon: 63
+  Liechtenstein: 1
+  Lithuania: 68
+  Luxembourg: 66
+  Madagascar: 1
+  Malaysia: 3258
+  Maldives: 110
+  Malta: 157
+  Mauritius: 49
+  Mexico: 5749
+  Moldova: 1
+  Monaco: 23
+  Mongolia: 1
+  Montenegro: 10
+  Morocco: 729
+  Mozambique: 2
+  Myanmar: 22
+  Namibia: 5
+  Nepal: 34
+  Netherlands: 2025
+  New Caledonia: 20
+  New Zealand: 1855
+  Nicaragua: 30
+  Nigeria: 13
+  Norway: 292
+  Oman: 70
+  Pakistan: 2
+  Palestinian Territories: 14
+  Panama: 153
+  Papua New Guinea: 1
+  Paraguay: 38
+  Peru: 772
+  Philippines: 2110
+  Poland: 3403
+  Portugal: 2503
+  Puerto Rico: 144
+  Qatar: 55
+  Republic of Macedonia: 31
+  Romania: 975
+  Russia: 2783
+  "R\xE9union": 44
+  Saint Lucia: 3
+  San Marino: 10
+  Saudi Arabia: 196
+  Senegal: 17
+  Serbia: 340
+  Seychelles: 8
+  Singapore: 431
+  Sint Maarten: 1
+  Slovakia: 266
+  Slovenia: 213
+  South Africa: 1588
+  South Korea: 945
+  Spain: 8654
+  Sri Lanka: 137
+  Swaziland: 1
+  Sweden: 776
+  Switzerland: 1029
+  Syria: 1
+  Taiwan: 2028
+  Tanzania: 10
+  Thailand: 3741
+  The Gambia: 1
+  Trinidad and Tobago: 1
+  Tunisia: 193
+  Turkey: 6186
+  Turks and Caicos Islands: 29
+  USA: 15519
+  Uganda: 6
+  Ukraine: 264
+  United Arab Emirates: 756
+  United Kingdom: 8430
+  Uruguay: 494
+  Uzbekistan: 2
+  Vanuatu: 5
+  Vatican City: 23
+  Venezuela: 75
+  Vietnam: 832
+  Zimbabwe: 1
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202694/files/trivago-clicks.txt.gz?download=1
-    size: 2862516
+    url: trivago-clicks.txt.gz
+    size: 2966049
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
 
 This is a hypergraph, where nodes are accommodations (mostly hotels), and hyperedges are sets of accommodations for which a user performed the "click-out" action during the same browsing session, which means the user was forwarded to a partner site.
 A few hyperedges are repeated.
-The dataset was derived from the ACM RecSys Challenge 2019. Each node is labeled with the country where the accommodation is located.
+The dataset was derived from the ACM RecSys Challenge 2019.
 
 ## Dataset Statistics
 
-<dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+<dl className="not-prose grid gap-5 sm:grid-cols-3">
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Hotel" />
+  <Stat title="Node Label" value="Country" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-3" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-2">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Click-out Actions" />
+  <Stat title="Hyperedge Type" value="Click-out Action in One Session" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
