--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -10,27 +10,311 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 88860
+  num-edges: 69906
+  node-degrees:
+    1: 37624
+    2: 16310
+    3: 8654
+    4: 5476
+    5: 3881
+    6: 2741
+    7: 2101
+    8: 1672
+    9: 1321
+    10: 1056
+    11: 864
+    12: 714
+    13: 641
+    14: 542
+    15: 436
+    16: 375
+    17: 359
+    18: 291
+    19: 252
+    20: 244
+    21: 224
+    22: 189
+    23: 168
+    24: 167
+    25: 130
+    26: 119
+    27: 118
+    28: 94
+    29: 102
+    30: 75
+    31: 83
+    32: 85
+    33: 74
+    34: 52
+    35: 90
+    36: 58
+    37: 64
+    38: 62
+    39: 52
+    40: 44
+    41: 55
+    42: 44
+    43: 38
+    44: 29
+    45: 34
+    46: 35
+    47: 38
+    48: 30
+    49: 30
+    50: 43
+    51: 21
+    52: 22
+    53: 23
+    54: 26
+    55: 16
+    56: 16
+    57: 13
+    58: 16
+    59: 19
+    60: 17
+    61: 23
+    62: 12
+    63: 16
+    64: 18
+    65: 18
+    66: 14
+    67: 17
+    68: 14
+    69: 10
+    70: 7
+    71: 19
+    72: 9
+    73: 12
+    74: 13
+    75: 8
+    76: 18
+    77: 8
+    78: 13
+    79: 10
+    80: 6
+    81: 12
+    82: 12
+    83: 8
+    84: 7
+    85: 3
+    86: 10
+    87: 7
+    88: 6
+    89: 12
+    90: 2
+    91: 6
+    92: 3
+    93: 8
+    94: 7
+    95: 7
+    96: 3
+    97: 4
+    98: 9
+    99: 2
+    100: 4
+    101: 6
+    102: 6
+    103: 5
+    105: 1
+    106: 2
+    107: 3
+    108: 5
+    109: 4
+    110: 7
+    111: 2
+    112: 1
+    113: 2
+    114: 6
+    115: 3
+    116: 5
+    117: 3
+    118: 5
+    119: 5
+    120: 3
+    121: 3
+    122: 3
+    123: 2
+    124: 5
+    125: 2
+    126: 1
+    127: 3
+    128: 2
+    129: 3
+    130: 3
+    131: 1
+    132: 1
+    133: 3
+    134: 1
+    135: 2
+    136: 2
+    137: 2
+    138: 2
+    139: 1
+    140: 5
+    141: 1
+    142: 2
+    143: 1
+    144: 2
+    145: 1
+    147: 2
+    150: 3
+    151: 3
+    152: 2
+    153: 2
+    154: 4
+    157: 3
+    158: 3
+    159: 3
+    160: 1
+    161: 2
+    162: 1
+    163: 1
+    167: 2
+    168: 3
+    169: 2
+    170: 4
+    171: 3
+    174: 1
+    176: 1
+    177: 2
+    178: 1
+    180: 3
+    182: 4
+    183: 1
+    187: 1
+    188: 2
+    189: 1
+    190: 1
+    192: 3
+    193: 3
+    194: 2
+    198: 1
+    201: 1
+    203: 1
+    209: 1
+    210: 1
+    218: 1
+    219: 1
+    223: 1
+    230: 1
+    233: 1
+    236: 1
+    238: 1
+    243: 1
+    245: 2
+    246: 2
+    248: 1
+    250: 2
+    253: 2
+    254: 2
+    258: 1
+    259: 2
+    261: 1
+    263: 1
+    264: 1
+    266: 2
+    268: 2
+    270: 1
+    271: 1
+    273: 1
+    274: 1
+    275: 1
+    277: 1
+    280: 1
+    282: 1
+    287: 1
+    293: 1
+    294: 1
+    296: 1
+    303: 1
+    306: 1
+    307: 1
+    311: 1
+    328: 1
+    330: 1
+    338: 1
+    343: 1
+    365: 1
+    367: 1
+    372: 1
+    374: 1
+    378: 1
+    382: 1
+    385: 1
+    398: 3
+    416: 2
+    421: 1
+    425: 2
+    426: 1
+    432: 1
+    464: 1
+    498: 1
+    519: 1
+    541: 1
+    555: 1
+    563: 1
+    567: 1
+    586: 1
+    604: 1
+    634: 1
+    668: 1
+    677: 1
+    729: 2
+    764: 1
+    840: 1
+    855: 1
+    967: 1
+    1076: 1
+    1096: 1
+    1182: 1
+    1218: 1
+    1505: 1
+    2030: 1
+    5733: 1
+  edge-degrees:
+    2: 16508
+    3: 10320
+    4: 7686
+    5: 5798
+    6: 4528
+    7: 3642
+    8: 3082
+    9: 2574
+    10: 2170
+    11: 1862
+    12: 1688
+    13: 1517
+    14: 1260
+    15: 1145
+    16: 1013
+    17: 864
+    18: 754
+    19: 667
+    20: 659
+    21: 571
+    22: 521
+    23: 425
+    24: 387
+    25: 265
 label-count:
-  Food, Household & Pets: 26178
-  Other: 4209
-  Clothing, Shoes & Accessories: 22302
-  Pharmacy, Health & Beauty: 12441
   Auto, Tires & Industrial: 3736
-  Electronics and Office: 3080
   Baby: 4391
-  Home, Furniture & Appliances: 6381
-  Toys, Games, and Video Games: 2902
-  Sports, Fitness & Outdoors: 1590
+  Clothing, Shoes & Accessories: 22302
+  Electronics and Office: 3080
+  Food, Household & Pets: 26178
   Home Improvement & Patio: 1650
-shape:
-  nodes: 88860
-  hyperedges: 69906
+  Home, Furniture & Appliances: 6381
+  Other: 4209
+  Pharmacy, Health & Beauty: 12441
+  Sports, Fitness & Outdoors: 1590
+  Toys, Games, and Video Games: 2902
 attachments:
   dataset:
-    url: https://zenodo.org/records/17201931/files/walmart-trips.txt.gz?download=1
-    size: 1391552
+    url: walmart-trips.txt.gz
+    size: 1420115
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -41,14 +325,19 @@ Products not assigned to any of these departments are grouped into an "Other" ca
 
 ## Dataset Statistics
 
-<dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+<dl className="not-prose grid gap-5 sm:grid-cols-3">
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Product" />
+  <Stat title="Node Label" value="Product Department" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-3" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-2">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Co-purchased Products" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
