--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -15,50 +15,156 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 423
+  num-edges: 1268
+  node-degrees:
+    1: 58
+    2: 48
+    3: 20
+    4: 16
+    5: 12
+    6: 9
+    7: 8
+    8: 12
+    9: 13
+    10: 47
+    11: 28
+    12: 4
+    13: 5
+    14: 1
+    15: 1
+    16: 4
+    17: 4
+    18: 5
+    19: 7
+    20: 14
+    21: 8
+    22: 8
+    23: 3
+    25: 3
+    26: 2
+    28: 2
+    29: 3
+    30: 6
+    31: 4
+    32: 3
+    33: 1
+    34: 3
+    36: 1
+    37: 1
+    38: 3
+    40: 6
+    41: 3
+    42: 1
+    43: 3
+    44: 3
+    45: 1
+    49: 1
+    50: 2
+    51: 1
+    53: 2
+    54: 1
+    57: 2
+    63: 1
+    65: 2
+    66: 1
+    67: 1
+    70: 2
+    72: 1
+    76: 1
+    78: 1
+    79: 1
+    81: 1
+    82: 1
+    83: 1
+    84: 1
+    92: 1
+    94: 1
+    111: 2
+    114: 1
+    115: 1
+    117: 2
+    130: 1
+    163: 1
+    174: 1
+    197: 1
+    202: 1
+    243: 1
+    375: 1
+  edge-degrees:
+    2: 316
+    3: 205
+    4: 114
+    5: 111
+    6: 74
+    7: 57
+    8: 70
+    9: 47
+    10: 40
+    11: 36
+    12: 36
+    13: 25
+    14: 27
+    15: 26
+    16: 15
+    17: 17
+    18: 11
+    19: 12
+    20: 5
+    21: 5
+    22: 3
+    23: 5
+    24: 2
+    25: 1
+    27: 1
+    28: 1
+    30: 1
+    39: 1
+    53: 1
+    60: 1
+    99: 1
+    107: 1
 related:
   - geometry-questions
-shape:
-  nodes: 423
-  hyperedges: 1268
 edge-label-count:
-  lie-algebras: 110
-  ac.commutative-algebra: 122
-  linear-algebra: 122
-  homological-algebra: 118
-  noncommutative-algebra: 72
   a-infinity-algebras: 9
-  qa.quantum-algebra: 97
-  oa.operator-algebras: 90
-  steenrod-algebra: 12
-  ra.rings-and-algebras: 115
-  von-neumann-algebras: 35
-  computer-algebra: 58
-  hopf-algebras: 75
-  banach-algebras: 13
-  c-star-algebras: 49
-  universal-algebra: 21
-  weyl-algebra: 11
-  planar-algebras: 17
-  differential-graded-algebras: 22
-  exterior-algebra: 11
-  clifford-algebras: 18
-  hecke-algebras: 5
-  real-algebraic-geometry: 12
   abstract-algebra: 33
+  ac.commutative-algebra: 122
+  banach-algebras: 13
   boolean-algebras: 11
-  division-algebras: 2
-  group-algebras: 2
-  lie-algebra-cohomology: 2
-  symmetric-algebras: 1
-  super-linear-algebra: 1
+  c-star-algebras: 49
   central-simple-algebras: 1
+  clifford-algebras: 18
+  computer-algebra: 58
+  differential-graded-algebras: 22
+  division-algebras: 2
+  exterior-algebra: 11
+  group-algebras: 2
+  hecke-algebras: 5
+  homological-algebra: 118
+  hopf-algebras: 75
   jordan-algebras: 1
+  lie-algebra-cohomology: 2
+  lie-algebras: 110
+  linear-algebra: 122
+  noncommutative-algebra: 72
+  oa.operator-algebras: 90
+  planar-algebras: 17
+  qa.quantum-algebra: 97
+  ra.rings-and-algebras: 115
+  real-algebraic-geometry: 12
+  steenrod-algebra: 12
+  super-linear-algebra: 1
+  symmetric-algebras: 1
+  universal-algebra: 21
+  von-neumann-algebras: 35
+  weyl-algebra: 11
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202446/files/algebra-questions.txt?download=1
-    size: 68524
+    url: algebra-questions.txt
+    size: 68569
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -69,13 +175,18 @@ The dataset was derived from the [Stack Exchange data dump](https://archive.org/
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="User" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-2" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-3">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Question Category" />
+  <Stat title="Hyperedge Type" value="Co-Answered Question" />
+  <Stat title="Hyperedge Label" value="Question Category" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-3" />
 </dl>
 
 ### Edge Labels
