--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -9,36 +9,565 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 6714
-shape:
-  nodes: 6714
-  hyperedges: 39774
+  num-edges: 39774
+  node-degrees:
+    1: 1759
+    2: 797
+    3: 483
+    4: 338
+    5: 275
+    6: 221
+    7: 172
+    8: 133
+    9: 136
+    10: 128
+    11: 93
+    12: 82
+    13: 65
+    14: 70
+    15: 62
+    16: 55
+    17: 54
+    18: 59
+    19: 43
+    20: 43
+    21: 62
+    22: 43
+    23: 30
+    24: 25
+    25: 26
+    26: 29
+    27: 31
+    28: 18
+    29: 22
+    30: 29
+    31: 31
+    32: 20
+    33: 20
+    34: 19
+    35: 16
+    36: 26
+    37: 27
+    38: 21
+    39: 14
+    40: 14
+    41: 13
+    42: 17
+    43: 13
+    44: 17
+    45: 12
+    46: 15
+    47: 16
+    48: 10
+    49: 14
+    50: 19
+    51: 19
+    52: 8
+    53: 8
+    54: 8
+    55: 12
+    56: 5
+    57: 9
+    58: 8
+    59: 8
+    60: 14
+    61: 13
+    62: 16
+    63: 9
+    64: 6
+    65: 7
+    66: 7
+    67: 7
+    68: 10
+    69: 8
+    70: 6
+    71: 8
+    72: 5
+    73: 8
+    74: 7
+    75: 3
+    76: 4
+    77: 8
+    78: 6
+    79: 9
+    80: 2
+    81: 7
+    82: 3
+    83: 5
+    84: 5
+    85: 7
+    86: 5
+    87: 3
+    88: 2
+    89: 1
+    90: 4
+    91: 4
+    92: 8
+    93: 7
+    94: 4
+    95: 3
+    96: 5
+    97: 4
+    98: 2
+    99: 2
+    100: 8
+    102: 2
+    103: 8
+    104: 4
+    105: 4
+    106: 8
+    107: 3
+    108: 6
+    109: 3
+    110: 3
+    111: 4
+    112: 3
+    113: 3
+    114: 3
+    115: 2
+    116: 3
+    117: 4
+    118: 4
+    119: 5
+    120: 2
+    121: 3
+    122: 4
+    123: 2
+    124: 3
+    125: 2
+    126: 3
+    127: 2
+    128: 2
+    129: 1
+    130: 6
+    131: 3
+    132: 1
+    133: 5
+    134: 4
+    135: 3
+    136: 2
+    137: 6
+    138: 2
+    139: 3
+    140: 2
+    141: 1
+    142: 3
+    143: 2
+    144: 3
+    145: 2
+    146: 1
+    147: 1
+    148: 3
+    149: 2
+    150: 2
+    152: 4
+    154: 3
+    155: 2
+    156: 3
+    157: 5
+    158: 3
+    159: 6
+    160: 1
+    161: 2
+    163: 2
+    164: 4
+    165: 1
+    167: 4
+    168: 1
+    169: 4
+    170: 1
+    171: 3
+    173: 3
+    174: 1
+    175: 5
+    177: 3
+    178: 3
+    179: 3
+    181: 2
+    183: 3
+    184: 2
+    185: 2
+    187: 2
+    189: 5
+    190: 2
+    191: 1
+    192: 2
+    193: 5
+    194: 1
+    195: 1
+    196: 2
+    197: 1
+    198: 1
+    199: 1
+    201: 1
+    202: 2
+    203: 1
+    204: 1
+    205: 2
+    206: 4
+    207: 1
+    208: 2
+    209: 3
+    212: 2
+    215: 2
+    216: 1
+    217: 1
+    218: 2
+    219: 2
+    220: 3
+    221: 3
+    222: 2
+    223: 1
+    224: 1
+    225: 2
+    226: 1
+    227: 3
+    228: 2
+    229: 4
+    230: 2
+    233: 1
+    234: 2
+    237: 2
+    238: 1
+    240: 2
+    242: 1
+    243: 1
+    244: 1
+    246: 1
+    247: 1
+    248: 2
+    249: 1
+    250: 1
+    253: 1
+    256: 1
+    257: 1
+    258: 2
+    259: 1
+    260: 1
+    263: 3
+    264: 1
+    266: 3
+    267: 2
+    268: 5
+    270: 2
+    271: 2
+    272: 1
+    273: 1
+    276: 2
+    277: 2
+    280: 2
+    282: 4
+    284: 1
+    285: 2
+    286: 1
+    287: 1
+    291: 1
+    292: 1
+    294: 1
+    295: 2
+    298: 2
+    299: 1
+    300: 1
+    302: 2
+    306: 2
+    307: 1
+    309: 1
+    311: 1
+    312: 1
+    313: 1
+    314: 1
+    316: 1
+    317: 1
+    319: 1
+    321: 2
+    322: 1
+    326: 1
+    329: 1
+    331: 1
+    333: 1
+    336: 2
+    337: 1
+    338: 2
+    339: 1
+    340: 1
+    341: 2
+    342: 2
+    343: 1
+    345: 5
+    347: 1
+    348: 3
+    350: 1
+    352: 3
+    353: 2
+    355: 2
+    356: 1
+    358: 1
+    361: 1
+    364: 3
+    366: 1
+    367: 1
+    368: 1
+    371: 1
+    373: 1
+    375: 1
+    376: 1
+    377: 1
+    381: 1
+    383: 1
+    385: 2
+    387: 3
+    393: 1
+    395: 3
+    402: 1
+    406: 1
+    407: 1
+    408: 1
+    409: 1
+    414: 1
+    416: 2
+    422: 1
+    424: 1
+    425: 1
+    426: 1
+    429: 1
+    432: 1
+    435: 1
+    436: 1
+    439: 1
+    440: 1
+    442: 1
+    447: 1
+    453: 3
+    454: 1
+    455: 2
+    457: 1
+    458: 2
+    459: 1
+    460: 1
+    461: 1
+    467: 1
+    470: 1
+    472: 1
+    473: 2
+    474: 1
+    482: 1
+    483: 1
+    485: 1
+    501: 2
+    502: 1
+    503: 1
+    505: 1
+    506: 1
+    509: 1
+    513: 1
+    528: 1
+    538: 1
+    541: 1
+    542: 1
+    554: 1
+    562: 1
+    567: 1
+    574: 1
+    575: 1
+    577: 1
+    578: 2
+    582: 1
+    585: 1
+    591: 1
+    600: 1
+    605: 1
+    610: 1
+    618: 1
+    619: 1
+    620: 1
+    644: 1
+    646: 1
+    669: 1
+    674: 1
+    676: 1
+    678: 1
+    684: 1
+    688: 1
+    694: 1
+    696: 1
+    738: 1
+    752: 1
+    764: 1
+    768: 3
+    769: 1
+    781: 1
+    793: 1
+    796: 1
+    825: 1
+    837: 1
+    839: 1
+    841: 1
+    849: 1
+    854: 1
+    858: 1
+    863: 1
+    865: 2
+    873: 2
+    877: 1
+    892: 1
+    896: 1
+    912: 1
+    925: 1
+    935: 1
+    940: 1
+    942: 1
+    949: 2
+    953: 1
+    963: 1
+    965: 1
+    982: 1
+    1018: 1
+    1036: 1
+    1039: 1
+    1072: 1
+    1093: 1
+    1094: 1
+    1111: 1
+    1137: 1
+    1142: 1
+    1146: 1
+    1158: 1
+    1160: 1
+    1180: 1
+    1184: 1
+    1204: 1
+    1218: 2
+    1223: 1
+    1228: 1
+    1231: 1
+    1247: 1
+    1250: 1
+    1287: 1
+    1298: 1
+    1299: 1
+    1348: 1
+    1368: 1
+    1394: 1
+    1439: 1
+    1442: 1
+    1477: 1
+    1490: 1
+    1503: 2
+    1523: 1
+    1538: 1
+    1554: 1
+    1583: 1
+    1604: 1
+    1623: 1
+    1679: 1
+    1698: 1
+    1706: 1
+    1730: 1
+    1738: 1
+    1755: 1
+    1757: 1
+    1773: 1
+    1885: 1
+    1891: 1
+    1896: 1
+    1939: 1
+    1970: 1
+    2036: 1
+    2263: 1
+    2627: 1
+    2747: 2
+    2782: 1
+    2814: 1
+    2948: 1
+    3058: 1
+    3078: 1
+    3113: 1
+    3296: 1
+    3388: 1
+    4385: 1
+    4438: 1
+    4632: 1
+    4784: 1
+    4847: 1
+    6236: 1
+    6434: 1
+    7380: 1
+    7457: 1
+    7971: 1
+    7972: 1
+    18048: 1
+  edge-degrees:
+    1: 22
+    2: 193
+    3: 549
+    4: 1128
+    5: 1891
+    6: 2663
+    7: 3329
+    8: 3555
+    9: 3755
+    10: 3679
+    11: 3512
+    12: 3146
+    13: 2698
+    14: 2251
+    15: 1809
+    16: 1438
+    17: 1160
+    18: 878
+    19: 610
+    20: 504
+    21: 313
+    22: 218
+    23: 141
+    24: 91
+    25: 72
+    26: 46
+    27: 20
+    28: 27
+    29: 21
+    30: 15
+    31: 11
+    32: 4
+    33: 4
+    34: 3
+    35: 3
+    36: 4
+    38: 2
+    40: 3
+    43: 1
+    49: 2
+    52: 1
+    59: 1
+    65: 1
 edge-label-count:
-  greek: 1175
-  southern_us: 4320
-  filipino: 755
-  indian: 3003
-  jamaican: 526
-  spanish: 989
-  italian: 7838
-  mexican: 6438
-  chinese: 2673
-  british: 804
-  thai: 1539
-  vietnamese: 825
-  cajun_creole: 1546
   brazilian: 467
+  british: 804
+  cajun_creole: 1546
+  chinese: 2673
+  filipino: 755
   french: 2646
-  japanese: 1423
+  greek: 1175
+  indian: 3003
   irish: 667
+  italian: 7838
+  jamaican: 526
+  japanese: 1423
   korean: 830
+  mexican: 6438
   moroccan: 821
   russian: 489
+  southern_us: 4320
+  spanish: 989
+  thai: 1539
+  vietnamese: 825
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202566/files/cooking.txt.gz?download=1
-    size: 851444
+    url: cooking.txt.gz
+    size: 851416
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Alert from "@/components/alert";
 import Stat from "@/components/stat";
@@ -52,13 +581,18 @@ Raw data was obtained from the [“What's Cooking?” Kaggle competition](https:
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Ingredient" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-2" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-3">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Recipe" />
+  <Stat title="Hyperedge Label" value="Cuisine" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-3" />
 </dl>
 
 ### Edge Labels
