--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -12,6 +12,1363 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 1494
+  num-edges: 60987
+  node-degrees:
+    1: 1
+    2: 2
+    7: 2
+    10: 1
+    16: 1
+    18: 1
+    20: 2
+    22: 2
+    25: 2
+    26: 2
+    27: 2
+    28: 1
+    31: 1
+    33: 1
+    34: 3
+    35: 1
+    36: 1
+    37: 1
+    38: 1
+    40: 1
+    41: 2
+    42: 1
+    43: 2
+    45: 1
+    46: 1
+    48: 2
+    49: 1
+    50: 1
+    51: 3
+    52: 1
+    54: 1
+    56: 1
+    57: 2
+    59: 4
+    60: 1
+    61: 2
+    63: 1
+    65: 2
+    66: 5
+    67: 1
+    68: 3
+    69: 5
+    71: 2
+    72: 1
+    73: 3
+    74: 5
+    75: 4
+    77: 1
+    78: 3
+    79: 1
+    80: 2
+    83: 3
+    84: 2
+    85: 2
+    86: 1
+    87: 3
+    88: 2
+    89: 1
+    90: 3
+    91: 2
+    92: 4
+    93: 1
+    94: 1
+    95: 3
+    96: 1
+    97: 4
+    98: 1
+    99: 6
+    100: 3
+    101: 3
+    102: 2
+    103: 1
+    104: 1
+    106: 1
+    107: 1
+    108: 2
+    110: 2
+    111: 2
+    112: 2
+    113: 1
+    114: 1
+    115: 3
+    117: 1
+    118: 3
+    119: 1
+    120: 1
+    121: 1
+    122: 2
+    123: 3
+    124: 3
+    125: 1
+    126: 3
+    127: 3
+    128: 2
+    129: 2
+    130: 4
+    131: 2
+    132: 2
+    133: 1
+    134: 3
+    135: 1
+    136: 1
+    137: 2
+    138: 3
+    139: 3
+    140: 4
+    141: 1
+    142: 7
+    143: 3
+    144: 4
+    145: 2
+    147: 3
+    149: 2
+    150: 2
+    151: 5
+    153: 3
+    154: 1
+    155: 4
+    156: 1
+    157: 1
+    158: 2
+    159: 3
+    160: 1
+    161: 1
+    162: 3
+    163: 2
+    164: 2
+    165: 2
+    166: 3
+    168: 2
+    169: 2
+    170: 2
+    171: 2
+    172: 3
+    173: 1
+    174: 1
+    176: 1
+    177: 2
+    178: 3
+    179: 2
+    180: 1
+    181: 1
+    182: 4
+    183: 2
+    184: 2
+    185: 2
+    186: 1
+    187: 1
+    188: 3
+    189: 3
+    194: 1
+    195: 2
+    196: 1
+    197: 1
+    198: 3
+    199: 1
+    201: 1
+    202: 2
+    203: 2
+    204: 1
+    206: 1
+    208: 4
+    209: 1
+    210: 4
+    211: 2
+    212: 3
+    214: 2
+    215: 1
+    216: 1
+    217: 5
+    219: 3
+    221: 2
+    222: 1
+    224: 1
+    225: 1
+    226: 1
+    227: 1
+    228: 1
+    229: 3
+    230: 1
+    231: 2
+    232: 1
+    233: 1
+    235: 1
+    236: 1
+    239: 1
+    244: 2
+    245: 3
+    246: 1
+    247: 2
+    251: 1
+    252: 1
+    253: 2
+    255: 2
+    256: 1
+    257: 2
+    258: 1
+    259: 2
+    262: 2
+    264: 1
+    265: 1
+    266: 1
+    267: 2
+    268: 1
+    271: 1
+    272: 1
+    273: 2
+    274: 1
+    275: 1
+    278: 1
+    280: 2
+    282: 1
+    283: 1
+    284: 3
+    285: 3
+    287: 3
+    290: 2
+    291: 3
+    295: 4
+    297: 2
+    298: 3
+    299: 1
+    300: 2
+    301: 2
+    303: 1
+    305: 1
+    307: 1
+    308: 1
+    309: 1
+    310: 2
+    311: 1
+    313: 1
+    314: 1
+    315: 1
+    317: 1
+    318: 3
+    319: 2
+    320: 1
+    322: 2
+    324: 2
+    325: 2
+    326: 1
+    327: 2
+    328: 2
+    329: 3
+    331: 1
+    332: 1
+    333: 3
+    334: 2
+    335: 1
+    337: 2
+    339: 1
+    341: 1
+    342: 1
+    344: 2
+    346: 1
+    347: 1
+    348: 4
+    349: 3
+    350: 1
+    353: 1
+    355: 1
+    356: 2
+    357: 2
+    358: 3
+    359: 1
+    360: 1
+    361: 1
+    362: 1
+    364: 3
+    371: 1
+    373: 1
+    374: 1
+    376: 2
+    377: 3
+    378: 2
+    379: 1
+    381: 2
+    382: 1
+    383: 3
+    384: 3
+    386: 1
+    387: 2
+    388: 2
+    389: 1
+    391: 3
+    393: 1
+    395: 3
+    396: 1
+    397: 1
+    399: 3
+    401: 1
+    403: 1
+    404: 2
+    406: 2
+    407: 1
+    408: 1
+    409: 1
+    410: 1
+    413: 1
+    414: 2
+    415: 1
+    416: 1
+    417: 2
+    418: 2
+    420: 2
+    423: 1
+    424: 1
+    425: 2
+    427: 1
+    429: 3
+    430: 3
+    431: 1
+    433: 2
+    434: 2
+    435: 2
+    439: 1
+    441: 1
+    442: 2
+    443: 1
+    445: 1
+    447: 1
+    448: 1
+    449: 1
+    450: 1
+    451: 2
+    452: 2
+    454: 1
+    455: 1
+    457: 1
+    458: 2
+    461: 1
+    462: 4
+    463: 1
+    467: 3
+    468: 3
+    469: 2
+    471: 1
+    472: 1
+    475: 2
+    476: 2
+    480: 1
+    485: 4
+    487: 1
+    490: 2
+    491: 1
+    492: 1
+    493: 2
+    494: 1
+    495: 2
+    497: 1
+    498: 1
+    499: 1
+    501: 1
+    502: 3
+    503: 1
+    504: 1
+    505: 2
+    506: 1
+    507: 1
+    508: 2
+    509: 3
+    510: 2
+    511: 1
+    513: 1
+    518: 2
+    519: 1
+    520: 2
+    522: 1
+    524: 1
+    525: 1
+    526: 1
+    528: 4
+    529: 3
+    532: 3
+    533: 1
+    535: 2
+    536: 2
+    541: 2
+    543: 2
+    544: 1
+    545: 2
+    546: 2
+    548: 4
+    549: 1
+    551: 1
+    554: 2
+    556: 1
+    558: 1
+    560: 2
+    561: 2
+    562: 2
+    564: 2
+    565: 2
+    572: 1
+    573: 1
+    574: 3
+    576: 1
+    578: 1
+    579: 2
+    580: 1
+    584: 2
+    586: 3
+    588: 3
+    589: 2
+    592: 2
+    593: 1
+    595: 1
+    597: 1
+    598: 2
+    599: 1
+    600: 1
+    601: 1
+    602: 1
+    604: 2
+    605: 2
+    606: 1
+    607: 1
+    608: 1
+    612: 2
+    614: 1
+    617: 2
+    618: 3
+    619: 1
+    621: 1
+    623: 1
+    624: 1
+    626: 2
+    629: 2
+    630: 2
+    631: 1
+    633: 1
+    635: 1
+    636: 1
+    643: 1
+    646: 2
+    647: 1
+    648: 2
+    649: 2
+    652: 1
+    654: 1
+    656: 1
+    657: 1
+    658: 1
+    660: 2
+    662: 3
+    663: 1
+    664: 1
+    665: 1
+    670: 2
+    671: 2
+    673: 1
+    674: 1
+    675: 1
+    676: 1
+    677: 1
+    679: 1
+    680: 1
+    682: 1
+    683: 1
+    684: 2
+    686: 2
+    691: 2
+    693: 3
+    695: 3
+    697: 1
+    698: 2
+    703: 1
+    708: 2
+    710: 2
+    711: 1
+    712: 2
+    713: 2
+    714: 3
+    719: 3
+    723: 2
+    724: 2
+    725: 1
+    726: 2
+    730: 1
+    732: 2
+    733: 1
+    737: 2
+    739: 1
+    740: 2
+    742: 1
+    743: 4
+    744: 2
+    746: 2
+    747: 1
+    749: 1
+    752: 1
+    753: 1
+    754: 3
+    756: 2
+    758: 1
+    760: 1
+    764: 1
+    765: 3
+    767: 3
+    775: 1
+    778: 1
+    781: 2
+    782: 2
+    785: 1
+    792: 1
+    794: 1
+    796: 1
+    797: 2
+    799: 1
+    801: 1
+    803: 2
+    804: 2
+    805: 1
+    806: 1
+    811: 2
+    812: 1
+    814: 2
+    816: 1
+    817: 1
+    822: 1
+    824: 1
+    825: 2
+    827: 1
+    828: 3
+    829: 2
+    831: 2
+    833: 1
+    835: 1
+    837: 1
+    838: 1
+    839: 1
+    840: 4
+    841: 2
+    843: 1
+    844: 1
+    846: 3
+    848: 1
+    851: 1
+    852: 1
+    855: 3
+    858: 1
+    861: 1
+    863: 1
+    865: 1
+    866: 2
+    867: 2
+    870: 1
+    873: 1
+    875: 2
+    876: 1
+    877: 1
+    880: 2
+    881: 1
+    882: 1
+    886: 2
+    887: 2
+    888: 2
+    892: 1
+    893: 1
+    895: 1
+    899: 1
+    900: 1
+    903: 1
+    905: 1
+    908: 3
+    910: 2
+    911: 1
+    913: 1
+    914: 1
+    917: 1
+    918: 1
+    919: 1
+    920: 1
+    924: 1
+    925: 1
+    927: 1
+    930: 1
+    931: 1
+    932: 1
+    933: 1
+    935: 1
+    936: 1
+    937: 1
+    938: 1
+    939: 1
+    940: 1
+    941: 2
+    942: 1
+    943: 1
+    946: 2
+    947: 1
+    953: 1
+    954: 1
+    955: 1
+    956: 1
+    961: 2
+    962: 3
+    964: 4
+    966: 1
+    968: 2
+    969: 1
+    970: 1
+    975: 2
+    977: 1
+    979: 2
+    983: 1
+    984: 1
+    985: 1
+    987: 1
+    989: 1
+    991: 2
+    992: 1
+    993: 1
+    996: 1
+    998: 3
+    1006: 2
+    1018: 1
+    1020: 1
+    1027: 1
+    1030: 1
+    1031: 1
+    1033: 1
+    1034: 1
+    1035: 1
+    1038: 1
+    1041: 2
+    1042: 1
+    1043: 1
+    1046: 1
+    1047: 1
+    1049: 1
+    1054: 1
+    1056: 1
+    1057: 2
+    1058: 1
+    1062: 1
+    1064: 1
+    1065: 1
+    1066: 3
+    1067: 1
+    1070: 1
+    1075: 2
+    1076: 1
+    1077: 1
+    1079: 1
+    1080: 1
+    1081: 2
+    1083: 1
+    1084: 1
+    1087: 1
+    1089: 1
+    1096: 1
+    1102: 1
+    1103: 2
+    1104: 1
+    1105: 1
+    1108: 1
+    1110: 1
+    1112: 1
+    1115: 1
+    1116: 1
+    1119: 2
+    1122: 1
+    1123: 2
+    1125: 1
+    1126: 2
+    1129: 1
+    1130: 1
+    1134: 1
+    1137: 2
+    1142: 2
+    1145: 1
+    1147: 1
+    1148: 1
+    1149: 1
+    1152: 1
+    1158: 1
+    1162: 2
+    1163: 1
+    1168: 1
+    1169: 1
+    1173: 1
+    1177: 1
+    1182: 1
+    1184: 1
+    1185: 1
+    1186: 2
+    1190: 1
+    1191: 2
+    1192: 1
+    1194: 1
+    1195: 1
+    1196: 2
+    1197: 1
+    1198: 1
+    1201: 1
+    1202: 1
+    1204: 1
+    1205: 1
+    1206: 1
+    1209: 1
+    1210: 2
+    1211: 1
+    1215: 1
+    1221: 2
+    1224: 1
+    1226: 2
+    1234: 1
+    1235: 1
+    1236: 1
+    1237: 1
+    1238: 1
+    1239: 1
+    1241: 2
+    1242: 1
+    1244: 1
+    1247: 1
+    1248: 1
+    1250: 2
+    1251: 1
+    1259: 3
+    1268: 1
+    1272: 3
+    1273: 1
+    1276: 1
+    1284: 1
+    1286: 1
+    1288: 2
+    1289: 1
+    1292: 1
+    1298: 1
+    1305: 2
+    1308: 1
+    1309: 1
+    1311: 1
+    1312: 1
+    1313: 1
+    1314: 1
+    1318: 1
+    1319: 2
+    1324: 1
+    1325: 1
+    1330: 1
+    1333: 1
+    1335: 1
+    1341: 1
+    1346: 1
+    1350: 1
+    1356: 1
+    1361: 1
+    1362: 1
+    1367: 2
+    1368: 1
+    1373: 1
+    1374: 2
+    1377: 1
+    1378: 1
+    1379: 1
+    1383: 1
+    1385: 3
+    1388: 1
+    1393: 1
+    1397: 1
+    1403: 1
+    1407: 2
+    1409: 1
+    1410: 1
+    1413: 1
+    1415: 1
+    1424: 1
+    1428: 1
+    1434: 1
+    1438: 1
+    1444: 1
+    1446: 1
+    1447: 1
+    1455: 1
+    1462: 1
+    1470: 1
+    1474: 2
+    1478: 1
+    1480: 1
+    1484: 1
+    1493: 1
+    1494: 1
+    1495: 1
+    1496: 1
+    1499: 1
+    1504: 1
+    1505: 3
+    1512: 1
+    1515: 1
+    1520: 1
+    1524: 1
+    1525: 1
+    1528: 1
+    1531: 1
+    1536: 1
+    1541: 1
+    1542: 1
+    1546: 1
+    1548: 1
+    1549: 1
+    1552: 1
+    1554: 1
+    1556: 1
+    1558: 1
+    1560: 1
+    1563: 1
+    1564: 1
+    1567: 1
+    1576: 1
+    1581: 1
+    1582: 1
+    1586: 2
+    1587: 2
+    1588: 1
+    1589: 1
+    1592: 1
+    1597: 1
+    1604: 1
+    1606: 1
+    1611: 1
+    1612: 1
+    1615: 1
+    1620: 1
+    1624: 1
+    1625: 1
+    1626: 1
+    1628: 1
+    1630: 1
+    1637: 1
+    1646: 1
+    1651: 1
+    1656: 1
+    1657: 1
+    1661: 1
+    1664: 1
+    1665: 1
+    1666: 1
+    1668: 1
+    1671: 1
+    1674: 1
+    1677: 1
+    1682: 1
+    1687: 2
+    1693: 1
+    1694: 1
+    1696: 1
+    1701: 1
+    1715: 1
+    1716: 1
+    1721: 1
+    1732: 1
+    1733: 1
+    1734: 1
+    1741: 1
+    1752: 1
+    1761: 1
+    1762: 1
+    1770: 1
+    1781: 1
+    1784: 2
+    1786: 1
+    1795: 2
+    1796: 1
+    1802: 1
+    1809: 1
+    1810: 1
+    1814: 1
+    1819: 1
+    1821: 3
+    1826: 1
+    1831: 1
+    1841: 1
+    1842: 1
+    1854: 1
+    1867: 1
+    1882: 2
+    1887: 1
+    1901: 1
+    1905: 1
+    1908: 1
+    1910: 2
+    1913: 1
+    1919: 1
+    1925: 1
+    1928: 2
+    1943: 1
+    1954: 1
+    1957: 1
+    1967: 1
+    1977: 1
+    1978: 1
+    1981: 1
+    1988: 1
+    1997: 1
+    2000: 1
+    2001: 1
+    2004: 1
+    2009: 1
+    2013: 1
+    2019: 1
+    2022: 1
+    2026: 1
+    2052: 1
+    2054: 1
+    2069: 3
+    2070: 1
+    2071: 1
+    2082: 1
+    2089: 1
+    2098: 1
+    2108: 2
+    2113: 1
+    2120: 1
+    2126: 1
+    2135: 1
+    2137: 1
+    2141: 1
+    2142: 1
+    2148: 1
+    2154: 1
+    2161: 1
+    2176: 1
+    2196: 1
+    2241: 1
+    2250: 1
+    2276: 1
+    2282: 1
+    2285: 1
+    2303: 1
+    2321: 2
+    2337: 1
+    2356: 1
+    2358: 1
+    2380: 1
+    2382: 1
+    2385: 1
+    2421: 1
+    2439: 1
+    2474: 1
+    2478: 1
+    2488: 1
+    2489: 1
+    2490: 1
+    2502: 1
+    2503: 1
+    2516: 1
+    2531: 1
+    2567: 1
+    2568: 1
+    2576: 1
+    2585: 1
+    2590: 1
+    2614: 1
+    2615: 1
+    2616: 1
+    2684: 1
+    2700: 1
+    2717: 1
+    2733: 1
+    2741: 1
+    2760: 1
+    2817: 2
+    2835: 1
+    2848: 1
+    2856: 1
+    2890: 1
+    2905: 1
+    2908: 1
+    2971: 1
+    2996: 1
+    3021: 1
+    3024: 1
+    3136: 1
+    3138: 1
+    3193: 1
+    3218: 1
+    3220: 1
+    3247: 1
+    3252: 1
+    3346: 1
+    3393: 1
+    3437: 1
+    3457: 1
+    3468: 1
+    3553: 1
+    3568: 1
+    3594: 1
+    3625: 1
+    3633: 1
+    3647: 1
+    3725: 1
+    3762: 1
+    3769: 1
+    3853: 1
+    3857: 1
+    3880: 1
+    3885: 1
+    3947: 1
+    4146: 1
+    4281: 1
+    4425: 1
+    4561: 1
+    4745: 1
+    5025: 1
+    5246: 1
+    5250: 1
+    5684: 1
+    6041: 1
+    6220: 1
+  edge-degrees:
+    2: 11453
+    3: 4873
+    4: 3735
+    5: 2769
+    6: 2318
+    7: 2074
+    8: 1852
+    9: 1695
+    10: 1568
+    11: 1449
+    12: 1324
+    13: 1234
+    14: 1281
+    15: 1195
+    16: 1061
+    17: 972
+    18: 972
+    19: 956
+    20: 883
+    21: 836
+    22: 809
+    23: 813
+    24: 1090
+    25: 1725
+    26: 447
+    27: 437
+    28: 344
+    29: 349
+    30: 331
+    31: 358
+    32: 336
+    33: 298
+    34: 292
+    35: 279
+    36: 262
+    37: 244
+    38: 238
+    39: 219
+    40: 211
+    41: 209
+    42: 200
+    43: 190
+    44: 194
+    45: 176
+    46: 164
+    47: 183
+    48: 144
+    49: 160
+    50: 171
+    51: 177
+    52: 157
+    53: 140
+    54: 126
+    55: 123
+    56: 121
+    57: 118
+    58: 100
+    59: 105
+    60: 118
+    61: 84
+    62: 101
+    63: 84
+    64: 96
+    65: 80
+    66: 94
+    67: 66
+    68: 85
+    69: 73
+    70: 73
+    71: 53
+    72: 76
+    73: 45
+    74: 54
+    75: 79
+    76: 69
+    77: 49
+    78: 45
+    79: 64
+    80: 53
+    81: 43
+    82: 58
+    83: 45
+    84: 57
+    85: 45
+    86: 53
+    87: 50
+    88: 38
+    89: 34
+    90: 36
+    91: 34
+    92: 41
+    93: 45
+    94: 40
+    95: 27
+    96: 42
+    97: 44
+    98: 32
+    99: 43
+    100: 48
+    101: 31
+    102: 33
+    103: 37
+    104: 32
+    105: 30
+    106: 35
+    107: 17
+    108: 35
+    109: 30
+    110: 32
+    111: 33
+    112: 30
+    113: 25
+    114: 22
+    115: 22
+    116: 31
+    117: 23
+    118: 17
+    119: 21
+    120: 19
+    121: 20
+    122: 18
+    123: 25
+    124: 21
+    125: 29
+    126: 24
+    127: 19
+    128: 17
+    129: 20
+    130: 28
+    131: 16
+    132: 24
+    133: 15
+    134: 26
+    135: 16
+    136: 11
+    137: 23
+    138: 17
+    139: 20
+    140: 24
+    141: 18
+    142: 16
+    143: 12
+    144: 12
+    145: 12
+    146: 16
+    147: 15
+    148: 8
+    149: 17
+    150: 16
+    151: 11
+    152: 10
+    153: 13
+    154: 14
+    155: 10
+    156: 16
+    157: 13
+    158: 11
+    159: 7
+    160: 11
+    161: 8
+    162: 15
+    163: 12
+    164: 10
+    165: 11
+    166: 15
+    167: 16
+    168: 9
+    169: 8
+    170: 9
+    171: 10
+    172: 11
+    173: 11
+    174: 4
+    175: 9
+    176: 8
+    177: 4
+    178: 13
+    179: 8
+    180: 4
+    181: 13
+    182: 8
+    183: 6
+    184: 10
+    185: 5
+    186: 5
+    187: 6
+    188: 4
+    189: 6
+    190: 5
+    191: 5
+    192: 3
+    193: 7
+    194: 4
+    195: 5
+    196: 7
+    197: 4
+    198: 8
+    199: 4
+    200: 7
+    201: 8
+    202: 5
+    203: 8
+    204: 4
+    205: 11
+    206: 4
+    207: 9
+    208: 5
+    209: 4
+    210: 2
+    211: 1
+    212: 4
+    213: 1
+    214: 2
+    215: 5
+    216: 2
+    217: 11
+    218: 7
+    219: 5
+    220: 8
+    221: 9
+    222: 8
+    223: 10
+    224: 7
+    225: 10
+    226: 10
+    227: 6
+    228: 10
+    229: 5
+    230: 11
+    231: 4
+    232: 4
+    233: 10
+    234: 4
+    235: 6
+    236: 7
+    237: 8
+    238: 9
+    239: 3
+    240: 3
+    241: 5
+    242: 6
+    243: 3
+    244: 6
+    245: 8
+    246: 3
+    247: 3
+    248: 2
+    249: 7
+    250: 3
+    251: 8
+    252: 5
+    253: 3
+    254: 4
+    255: 5
+    256: 2
+    257: 5
+    258: 3
+    259: 5
+    260: 4
+    261: 2
+    262: 5
+    263: 2
+    264: 3
+    265: 4
+    266: 3
+    267: 1
+    268: 1
+    269: 4
+    270: 4
+    271: 2
+    273: 3
+    274: 1
+    275: 2
+    276: 4
+    277: 2
+    279: 4
+    281: 1
+    282: 1
+    283: 2
+    284: 2
+    285: 1
+    286: 4
+    287: 4
+    288: 5
+    289: 5
+    290: 4
+    291: 2
+    292: 1
+    293: 1
+    294: 1
+    295: 5
+    296: 4
+    297: 3
+    298: 4
+    299: 2
+    300: 2
+    301: 3
+    302: 2
+    303: 1
+    304: 2
+    305: 2
+    307: 1
+    308: 2
+    310: 2
+    311: 3
+    312: 1
+    313: 2
+    314: 2
+    315: 2
+    316: 1
+    317: 2
+    318: 1
+    319: 2
+    321: 1
+    322: 1
+    323: 2
+    324: 3
+    325: 3
+    327: 1
+    328: 1
+    331: 1
+    333: 1
+    334: 1
+    335: 1
+    337: 2
+    338: 1
+    339: 1
+    341: 1
+    347: 2
+    354: 1
+    355: 1
+    358: 1
+    362: 1
+    365: 1
+    366: 1
+    367: 1
+    372: 2
+    376: 1
+    378: 1
+    395: 1
+    399: 1
 label-count:
   Democrat: 792
   Republican: 702
@@ -19,15 +1376,13 @@ related:
   - house-committees
   - congress-bills
   - senate-bills
-shape:
-  nodes: 1494
-  hyperedges: 60987
 attachments:
   dataset:
-    url: https://zenodo.org/records/17198796/files/house-bills.txt?download=1
-    size: 5330425
+    url: house-bills.txt
+    size: 5513425
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -39,14 +1394,19 @@ Each node is labeled with political party affiliation.
 
 ## Dataset Statistics
 
-<dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+<dl className="not-prose grid gap-5 sm:grid-cols-3">
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="US Congressperson" />
+  <Stat title="Node Label" value="Political Party" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-3" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-2">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Sponsors of Bill" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
