--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -10,21 +10,129 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 1290
+  num-edges: 341
+  node-degrees:
+    1: 57
+    2: 158
+    3: 117
+    4: 102
+    5: 72
+    6: 85
+    7: 58
+    8: 77
+    9: 60
+    10: 57
+    11: 55
+    12: 46
+    13: 43
+    14: 33
+    15: 37
+    16: 25
+    17: 29
+    18: 26
+    19: 23
+    20: 21
+    21: 16
+    22: 16
+    23: 15
+    24: 10
+    25: 11
+    26: 12
+    27: 4
+    28: 7
+    29: 5
+    30: 2
+    31: 1
+    32: 2
+    33: 2
+    34: 1
+    36: 1
+    38: 3
+    44: 1
+  edge-degrees:
+    1: 1
+    2: 1
+    3: 2
+    4: 11
+    5: 29
+    6: 5
+    7: 2
+    8: 1
+    9: 10
+    10: 17
+    11: 4
+    12: 8
+    13: 12
+    14: 2
+    15: 4
+    16: 2
+    18: 1
+    19: 3
+    21: 2
+    23: 7
+    24: 3
+    25: 1
+    26: 3
+    29: 2
+    31: 3
+    32: 3
+    33: 3
+    34: 2
+    35: 5
+    36: 2
+    37: 4
+    38: 2
+    39: 11
+    40: 4
+    41: 11
+    42: 10
+    43: 3
+    44: 12
+    45: 9
+    46: 7
+    47: 3
+    48: 6
+    49: 9
+    50: 11
+    51: 11
+    52: 6
+    53: 7
+    54: 5
+    55: 4
+    56: 1
+    57: 5
+    58: 3
+    60: 4
+    61: 9
+    62: 2
+    63: 2
+    64: 4
+    65: 6
+    66: 2
+    67: 3
+    68: 1
+    70: 1
+    71: 3
+    73: 1
+    76: 2
+    77: 2
+    78: 1
+    79: 1
+    80: 1
+    81: 1
 related:
   - house-bills
   - senate-committees
 label-count:
   Democrat: 620
   Republican: 670
-shape:
-  nodes: 1290
-  hyperedges: 341
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202783/files/house-committees.txt?download=1
-    size: 82777
+    url: house-committees.txt
+    size: 83844
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import Alert from "@/components/alert";
@@ -39,13 +147,15 @@ Each node is labeled with political party affiliation.
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Representative" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-2" />
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Committee Memberships" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
