--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -10,6 +10,354 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 73851
+  num-edges: 5446
+  node-degrees:
+    1: 45506
+    2: 17252
+    3: 5960
+    4: 2329
+    5: 1056
+    6: 534
+    7: 303
+    8: 200
+    9: 134
+    10: 89
+    11: 80
+    12: 58
+    13: 30
+    14: 40
+    15: 24
+    16: 27
+    17: 23
+    18: 19
+    19: 16
+    20: 18
+    21: 9
+    22: 14
+    23: 6
+    24: 7
+    25: 10
+    26: 4
+    27: 9
+    28: 7
+    29: 7
+    30: 6
+    31: 4
+    32: 6
+    33: 5
+    34: 4
+    35: 4
+    36: 2
+    38: 3
+    39: 2
+    40: 1
+    41: 4
+    43: 4
+    45: 3
+    47: 2
+    48: 2
+    50: 2
+    51: 1
+    52: 3
+    53: 3
+    55: 4
+    56: 1
+    57: 2
+    58: 1
+    60: 1
+    62: 1
+    63: 1
+    64: 1
+    66: 1
+    70: 1
+    74: 2
+    83: 1
+    88: 1
+    173: 1
+  edge-degrees:
+    2: 1360
+    3: 710
+    4: 506
+    5: 329
+    6: 259
+    7: 210
+    8: 160
+    9: 134
+    10: 130
+    11: 93
+    12: 89
+    13: 66
+    14: 58
+    15: 45
+    16: 64
+    17: 51
+    18: 48
+    19: 49
+    20: 37
+    21: 35
+    22: 31
+    23: 45
+    24: 26
+    25: 23
+    26: 25
+    27: 23
+    28: 21
+    29: 16
+    30: 18
+    31: 16
+    32: 13
+    33: 23
+    34: 20
+    35: 19
+    36: 18
+    37: 17
+    38: 7
+    39: 11
+    40: 18
+    41: 15
+    42: 15
+    43: 8
+    44: 7
+    45: 8
+    46: 15
+    47: 11
+    48: 7
+    49: 13
+    50: 6
+    51: 7
+    52: 13
+    53: 10
+    54: 9
+    55: 11
+    56: 5
+    57: 8
+    58: 7
+    59: 10
+    60: 5
+    61: 8
+    62: 8
+    63: 5
+    64: 7
+    65: 7
+    66: 2
+    67: 4
+    68: 3
+    69: 1
+    70: 5
+    71: 5
+    72: 7
+    73: 7
+    74: 5
+    75: 5
+    76: 3
+    77: 4
+    78: 4
+    79: 5
+    80: 4
+    82: 2
+    83: 5
+    84: 1
+    85: 5
+    86: 6
+    87: 2
+    88: 3
+    89: 2
+    90: 3
+    91: 2
+    92: 5
+    93: 3
+    94: 6
+    95: 1
+    96: 7
+    97: 4
+    99: 3
+    100: 4
+    101: 3
+    102: 4
+    104: 2
+    106: 2
+    107: 3
+    108: 3
+    109: 2
+    110: 1
+    111: 4
+    112: 4
+    113: 5
+    115: 4
+    116: 1
+    117: 3
+    119: 2
+    120: 3
+    121: 1
+    122: 4
+    123: 1
+    124: 3
+    125: 1
+    126: 1
+    128: 1
+    129: 3
+    130: 1
+    131: 3
+    132: 2
+    133: 1
+    137: 4
+    138: 3
+    139: 1
+    140: 1
+    141: 1
+    142: 1
+    143: 2
+    145: 4
+    147: 1
+    149: 3
+    150: 1
+    151: 2
+    152: 2
+    153: 3
+    155: 1
+    156: 3
+    158: 1
+    159: 1
+    160: 2
+    161: 1
+    162: 1
+    163: 1
+    165: 1
+    166: 3
+    167: 1
+    168: 1
+    170: 1
+    172: 2
+    173: 1
+    174: 2
+    175: 1
+    176: 1
+    178: 1
+    182: 1
+    183: 1
+    185: 1
+    186: 1
+    188: 1
+    189: 1
+    190: 2
+    192: 2
+    193: 3
+    194: 2
+    195: 1
+    196: 1
+    198: 2
+    199: 1
+    205: 1
+    208: 2
+    209: 1
+    210: 1
+    211: 1
+    215: 1
+    216: 2
+    221: 1
+    223: 1
+    224: 1
+    225: 1
+    229: 1
+    231: 1
+    234: 1
+    235: 4
+    237: 2
+    240: 1
+    241: 1
+    245: 1
+    247: 1
+    248: 1
+    251: 1
+    253: 1
+    254: 2
+    255: 1
+    256: 1
+    261: 1
+    264: 3
+    265: 1
+    268: 3
+    270: 1
+    273: 1
+    274: 1
+    278: 2
+    287: 1
+    288: 1
+    289: 1
+    290: 1
+    292: 1
+    295: 1
+    298: 1
+    300: 1
+    305: 1
+    309: 1
+    310: 1
+    311: 1
+    313: 1
+    319: 1
+    327: 1
+    331: 1
+    340: 2
+    343: 1
+    346: 1
+    351: 1
+    367: 2
+    368: 1
+    369: 1
+    373: 1
+    376: 1
+    377: 1
+    379: 1
+    388: 1
+    393: 1
+    396: 1
+    398: 1
+    400: 1
+    401: 1
+    402: 1
+    403: 1
+    404: 1
+    409: 2
+    410: 1
+    411: 1
+    414: 1
+    419: 2
+    422: 1
+    439: 1
+    450: 1
+    457: 1
+    467: 1
+    468: 1
+    471: 1
+    475: 1
+    477: 1
+    482: 1
+    507: 1
+    536: 1
+    580: 1
+    584: 1
+    587: 1
+    600: 1
+    615: 1
+    618: 1
+    623: 1
+    640: 1
+    659: 1
+    677: 1
+    692: 1
+    693: 1
+    702: 1
+    705: 1
+    759: 1
+    793: 1
+    908: 1
+    941: 1
+    983: 1
+    1006: 1
+    1176: 1
+    1288: 1
+    1497: 1
+    1784: 1
 related:
   - stackoverflow-answers
 label-count:
@@ -1454,15 +1802,13 @@ label-count:
   real-combinatorics: 1
   character-sheaves: 1
   homogenization: 1
-shape:
-  nodes: 73851
-  hyperedges: 5446
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202738/files/mathoverflow-answers.txt.gz?download=1
-    size: 1080433
+    url: mathoverflow-answers.txt.gz
+    size: 1082323
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -1471,14 +1817,19 @@ The mathoverflow-answers network is a hypergraph where hyperedges are sets of qu
 
 ## Dataset Statistics
 
-<dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-3">
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Question" />
+  <Stat title="Node Label" value="Category" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-3" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-2">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Co-answered Questions" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
