--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -11,9 +11,130 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 1106
-shape:
-  nodes: 1106
-  hyperedges: 694
+  num-edges: 694
+  node-degrees:
+    1: 95
+    2: 186
+    3: 44
+    4: 116
+    5: 196
+    6: 47
+    7: 21
+    8: 27
+    9: 18
+    10: 21
+    11: 6
+    12: 9
+    13: 13
+    14: 3
+    15: 11
+    16: 25
+    17: 8
+    18: 7
+    19: 101
+    20: 45
+    21: 33
+    22: 7
+    23: 7
+    24: 5
+    25: 3
+    26: 5
+    27: 6
+    28: 2
+    29: 3
+    30: 2
+    31: 1
+    32: 1
+    33: 1
+    34: 1
+    35: 3
+    36: 2
+    37: 2
+    38: 1
+    39: 1
+    41: 1
+    44: 1
+    46: 2
+    47: 2
+    48: 3
+    53: 1
+    55: 1
+    60: 1
+    62: 2
+    64: 2
+    67: 1
+    69: 1
+    72: 1
+    82: 1
+    127: 1
+  edge-degrees:
+    2: 86
+    3: 52
+    4: 39
+    5: 33
+    6: 38
+    7: 37
+    8: 25
+    9: 25
+    10: 19
+    11: 20
+    12: 13
+    13: 18
+    14: 19
+    15: 22
+    16: 14
+    17: 20
+    18: 13
+    19: 15
+    20: 9
+    21: 11
+    22: 17
+    23: 8
+    24: 4
+    25: 7
+    26: 14
+    27: 4
+    28: 8
+    29: 10
+    30: 11
+    31: 5
+    32: 2
+    33: 4
+    34: 6
+    36: 6
+    37: 3
+    38: 2
+    39: 4
+    40: 1
+    41: 4
+    42: 2
+    43: 3
+    45: 4
+    46: 1
+    47: 2
+    48: 4
+    49: 2
+    50: 1
+    52: 2
+    53: 2
+    54: 3
+    55: 1
+    56: 1
+    57: 1
+    59: 2
+    60: 2
+    61: 1
+    64: 1
+    65: 1
+    67: 1
+    68: 1
+    69: 1
+    72: 1
+    73: 1
+    76: 1
+    78: 1
+    79: 2
+    83: 1
 edge-label-count:
   New York Blues: 239
   Chicago Blues: 223
@@ -24,10 +145,11 @@ edge-label-count:
   Detroit Blues: 4
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202708/files/music-blues-reviews.txt?download=1
-    size: 58404
+    url: music-blues-reviews.txt
+    size: 58451
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Alert from "@/components/alert";
 import Stat from "@/components/stat";
@@ -41,13 +163,18 @@ The dataset was derived from the product reviews collected by Jianmo Ni, Jiachen
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
-  <Stat title="Node Type" value="Review" />
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
+  <Stat title="Node Type" value="Reviewer" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-2" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-3">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Co-reviewed" />
+  <Stat title="Hyperedge Label" value="Product Category" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-3" />
 </dl>
 
 ### Edge Labels
