--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -12,6 +12,368 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 294
+  num-edges: 29157
+  node-degrees:
+    1: 1
+    3: 1
+    5: 1
+    11: 2
+    14: 1
+    20: 1
+    24: 1
+    27: 1
+    28: 1
+    64: 1
+    67: 1
+    70: 1
+    78: 1
+    82: 1
+    84: 1
+    88: 1
+    89: 1
+    93: 1
+    96: 1
+    100: 1
+    103: 1
+    105: 2
+    110: 1
+    123: 1
+    125: 1
+    126: 1
+    137: 2
+    144: 1
+    146: 2
+    152: 2
+    167: 1
+    178: 1
+    179: 1
+    181: 1
+    182: 1
+    190: 1
+    195: 1
+    196: 1
+    203: 1
+    216: 1
+    223: 1
+    235: 1
+    236: 3
+    237: 1
+    238: 1
+    243: 1
+    249: 1
+    253: 1
+    255: 1
+    265: 2
+    266: 1
+    269: 1
+    277: 1
+    282: 1
+    283: 2
+    298: 1
+    299: 1
+    300: 1
+    308: 1
+    312: 1
+    323: 1
+    325: 1
+    330: 2
+    332: 1
+    334: 1
+    336: 3
+    340: 1
+    352: 1
+    357: 1
+    359: 1
+    362: 1
+    363: 2
+    365: 1
+    366: 1
+    368: 1
+    376: 2
+    383: 1
+    386: 1
+    395: 2
+    399: 1
+    403: 2
+    407: 1
+    411: 1
+    412: 1
+    416: 1
+    418: 1
+    420: 1
+    426: 1
+    429: 1
+    434: 1
+    438: 1
+    439: 1
+    440: 1
+    445: 1
+    452: 1
+    455: 1
+    460: 1
+    461: 3
+    462: 1
+    468: 1
+    469: 1
+    478: 1
+    482: 1
+    486: 1
+    489: 1
+    495: 2
+    500: 1
+    503: 1
+    510: 1
+    515: 1
+    520: 1
+    522: 1
+    525: 1
+    533: 1
+    536: 1
+    550: 1
+    551: 2
+    554: 1
+    559: 1
+    563: 1
+    581: 1
+    583: 1
+    588: 1
+    589: 1
+    590: 1
+    591: 2
+    594: 1
+    600: 1
+    604: 1
+    606: 1
+    613: 1
+    617: 1
+    620: 1
+    626: 1
+    630: 1
+    637: 1
+    644: 1
+    650: 1
+    656: 1
+    659: 1
+    666: 1
+    674: 1
+    676: 1
+    679: 1
+    705: 1
+    709: 1
+    710: 1
+    711: 1
+    717: 1
+    721: 1
+    725: 1
+    736: 1
+    739: 1
+    740: 1
+    757: 1
+    760: 1
+    762: 1
+    780: 1
+    791: 1
+    801: 1
+    812: 1
+    833: 1
+    843: 1
+    854: 1
+    863: 1
+    864: 1
+    866: 1
+    868: 1
+    876: 1
+    883: 1
+    890: 1
+    895: 1
+    900: 1
+    903: 1
+    907: 1
+    912: 1
+    922: 1
+    925: 1
+    952: 1
+    956: 1
+    961: 1
+    966: 1
+    967: 2
+    972: 1
+    974: 1
+    981: 1
+    987: 1
+    999: 1
+    1002: 2
+    1007: 1
+    1010: 1
+    1014: 1
+    1042: 1
+    1051: 1
+    1086: 1
+    1110: 1
+    1119: 1
+    1125: 2
+    1137: 2
+    1169: 1
+    1171: 1
+    1184: 1
+    1186: 1
+    1199: 1
+    1208: 1
+    1209: 1
+    1245: 1
+    1260: 1
+    1261: 1
+    1265: 1
+    1268: 1
+    1274: 1
+    1279: 1
+    1280: 1
+    1285: 1
+    1304: 1
+    1313: 1
+    1337: 1
+    1339: 1
+    1341: 1
+    1361: 1
+    1383: 1
+    1389: 1
+    1398: 1
+    1400: 1
+    1431: 1
+    1500: 1
+    1503: 1
+    1537: 1
+    1569: 1
+    1581: 1
+    1597: 1
+    1601: 1
+    1611: 1
+    1623: 1
+    1629: 1
+    1637: 1
+    1641: 1
+    1654: 1
+    1661: 1
+    1663: 1
+    1711: 1
+    1754: 1
+    1783: 1
+    1812: 1
+    1828: 1
+    1831: 1
+    1943: 1
+    2028: 1
+    2030: 1
+    2044: 1
+    2059: 1
+    2064: 1
+    2113: 1
+    2163: 1
+    2186: 1
+    2255: 1
+    2259: 1
+    2268: 1
+    2301: 1
+    2338: 1
+    2339: 1
+    2385: 1
+    2492: 1
+    2535: 1
+    2540: 1
+    2674: 1
+    3464: 1
+    3514: 1
+  edge-degrees:
+    2: 9838
+    3: 3513
+    4: 2600
+    5: 1729
+    6: 1462
+    7: 1162
+    8: 989
+    9: 902
+    10: 700
+    11: 640
+    12: 540
+    13: 435
+    14: 433
+    15: 382
+    16: 305
+    17: 309
+    18: 256
+    19: 220
+    20: 208
+    21: 185
+    22: 206
+    23: 143
+    24: 143
+    25: 134
+    26: 89
+    27: 120
+    28: 105
+    29: 91
+    30: 88
+    31: 73
+    32: 77
+    33: 59
+    34: 66
+    35: 49
+    36: 64
+    37: 45
+    38: 42
+    39: 48
+    40: 36
+    41: 37
+    42: 36
+    43: 28
+    44: 28
+    45: 32
+    46: 21
+    47: 27
+    48: 21
+    49: 25
+    50: 31
+    51: 19
+    52: 30
+    53: 28
+    54: 15
+    55: 16
+    56: 16
+    57: 23
+    58: 10
+    59: 16
+    60: 13
+    61: 17
+    62: 15
+    63: 16
+    64: 10
+    65: 7
+    66: 10
+    67: 15
+    68: 12
+    69: 10
+    70: 9
+    71: 6
+    72: 6
+    73: 4
+    74: 4
+    75: 10
+    76: 6
+    77: 3
+    78: 7
+    79: 6
+    80: 7
+    81: 2
+    82: 2
+    83: 3
+    85: 2
+    86: 3
+    87: 1
+    89: 1
+    90: 1
+    96: 1
+    98: 1
+    99: 2
 related:
   - senate-committees
   - congress-bills
@@ -19,15 +381,13 @@ related:
 label-count:
   Democrat: 150
   Republican: 144
-shape:
-  nodes: 294
-  hyperedges: 29157
 attachments:
   dataset:
-    url: https://zenodo.org/records/17198877/files/senate-bills.txt?download=1
-    size: 864643
+    url: senate-bills.txt
+    size: 952154
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -39,14 +399,19 @@ Each node is labeled with political party affiliation.
 
 ## Dataset Statistics
 
-<dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+<dl className="not-prose grid gap-5 sm:grid-cols-3">
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="US Congressperson" />
+  <Stat title="Node Label" value="Political Party" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-3" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-2">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
   <Stat title="Hyperedge Type" value="Sponsors of Bill" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-2" />
 </dl>
 
 ### Node Labels
