--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -16,9 +16,120 @@ tags:
   - 'source: benson'
 statistics:
   num-nodes: 1234
-shape:
-  nodes: 1234
-  hyperedges: 1194
+  num-edges: 1194
+  node-degrees:
+    1: 46
+    2: 16
+    3: 1
+    4: 31
+    5: 49
+    6: 55
+    7: 241
+    8: 256
+    9: 81
+    10: 183
+    11: 94
+    12: 27
+    13: 7
+    14: 24
+    15: 14
+    16: 19
+    17: 5
+    18: 7
+    19: 6
+    20: 14
+    21: 10
+    22: 8
+    23: 6
+    24: 2
+    26: 2
+    27: 1
+    28: 2
+    29: 6
+    30: 5
+    31: 1
+    32: 1
+    34: 1
+    35: 1
+    40: 1
+    41: 1
+    42: 1
+    44: 1
+    48: 1
+    49: 1
+    54: 1
+    56: 1
+    60: 2
+    83: 1
+    147: 1
+  edge-degrees:
+    2: 237
+    3: 191
+    4: 153
+    5: 126
+    6: 74
+    7: 46
+    8: 45
+    9: 36
+    10: 27
+    11: 19
+    12: 17
+    13: 15
+    14: 7
+    15: 8
+    16: 6
+    17: 10
+    18: 10
+    19: 9
+    20: 13
+    21: 7
+    22: 12
+    23: 10
+    24: 6
+    25: 5
+    26: 3
+    27: 3
+    28: 3
+    29: 1
+    30: 1
+    31: 2
+    34: 1
+    35: 1
+    36: 1
+    37: 3
+    38: 1
+    39: 2
+    40: 1
+    41: 2
+    42: 2
+    43: 1
+    44: 1
+    45: 1
+    46: 4
+    47: 2
+    48: 3
+    49: 4
+    50: 6
+    51: 5
+    52: 5
+    53: 3
+    54: 7
+    55: 5
+    56: 3
+    57: 1
+    58: 1
+    59: 3
+    60: 1
+    61: 2
+    62: 4
+    63: 3
+    64: 2
+    65: 3
+    67: 1
+    69: 2
+    70: 2
+    72: 2
+    73: 1
 edge-label-count:
   '11': 139
   '5': 133
@@ -37,10 +148,11 @@ edge-label-count:
   '9': 3
 attachments:
   dataset:
-    url: https://zenodo.org/records/17202660/files/vegas-bars-reviews.txt?download=1
-    size: 65649
+    url: vegas-bars-reviews.txt
+    size: 65695
 ---
 
+import { ComputedBoxPlot } from "@/components/chart/box-plot";
 import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
@@ -51,13 +163,18 @@ The dataset was derived from the [Yelp Kaggle competition data](https://www.kagg
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
-  <Stat title="Nodes" value={formatNumber(frontmatter["shape"]["nodes"])} />
+  <Stat title="Nodes" value={formatNumber(frontmatter["statistics"]["num-nodes"])} />
   <Stat title="Node Type" value="Yelp User" />
+  <ComputedBoxPlot title="Node Degree" values={frontmatter["statistics"]["node-degrees"]} className="sm:col-span-2" />
+</dl>
+<dl className="not-prose grid mt-5 gap-5 sm:grid-cols-3">
   <Stat
     title="Hyperedges"
-    value={formatNumber(frontmatter["shape"]["hyperedges"])}
+    value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Co-reviewed" />
+  <Stat title="Hyperedge Type" value="Co-reviewed Bar" />
+  <Stat title="Hyperedge Label" value="Bar Category" />
+  <ComputedBoxPlot title="Hyperedge Degree" values={frontmatter["statistics"]["edge-degrees"]} className="sm:col-span-3" />
 </dl>
 
 ### Edge Labels
