--- a/src/datasets/NDC-substances.mdx
+++ b/src/datasets/NDC-substances.mdx
@@ -3,6 +3,9 @@ title: NDC Substances
 source: https://www.cs.cornell.edu/~arb/data/NDC-substances/
 citation:
 - 10.1073/pnas.1800683115
+network-type:
+- simplicial-complex
+- hypergraph
 tags:
 - undirected
 - temporal
