--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -9,7 +9,9 @@ citation:
       journal={arXiv:2006.05645},
       year={2020}
     }
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - edge labels
   - 'source: benson'
