--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -11,7 +11,9 @@ citation:
       year={2019},
       doi={10.18653/v1/D19-1018}
     }
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
