--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -3,7 +3,8 @@ title: Cooking
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-Cooking/
 citation:
   - 10.1145/3366423.3380152
-network-type: hypergraph
+network-type:
+  - hypergraph
 tags:
   - edge labels
   - 'source: benson'
