--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -3,7 +3,9 @@ title: House Committees
 source: https://www.cs.cornell.edu/~arb/data/house-committees/
 citation:
   - 10.1126/sciadv.abh1303
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
