--- a/src/datasets/karate-club.mdx
+++ b/src/datasets/karate-club.mdx
@@ -3,7 +3,8 @@ title: Karate Club
 source: https://networkx.org/documentation/stable/reference/generated/networkx.generators.social.karate_club_graph.html
 citation:
   - 10.1086/jar.33.4.3629752
-network-type: simplicial
+network-type:
+  - simplicial-complex
 tags:
   - social
   - 'lifting: clique complex'
