--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -3,7 +3,9 @@ title: MathOverflow Answers
 source: https://www.cs.cornell.edu/~arb/data/mathoverflow-answers/
 citation:
   - 10.1145/3394486.3403222
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
