--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -3,7 +3,9 @@ title: Music Blues Reviews
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-music-blues-reviews/
 citation:
   - 10.18653/v1/D19-1018
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - edge labels
   - temporal
