--- a/src/datasets/semantic-scholar-coauth-sample.mdx
+++ b/src/datasets/semantic-scholar-coauth-sample.mdx
@@ -11,6 +11,8 @@ citation:
       year={2020},
       url={https://openreview.net/forum?id=nPCt39DVIfk}
     }
+network-type:
+  - simplicial-complex
 tags:
   - social
   - undirected
