--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -5,7 +5,8 @@ citation:
   - 10.1126/sciadv.abh1303
   - 10.1093/pan/mpl002
   - 10.1016/j.socnet.2005.11.003
-network-type: hypergraph
+network-type:
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
