--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -3,7 +3,9 @@ title: Senate Committees
 source: https://www.cs.cornell.edu/~arb/data/senate-committees/
 citation:
   - 10.18653/v1/D19-1018
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
