--- a/src/datasets/stackoverflow-answers.mdx
+++ b/src/datasets/stackoverflow-answers.mdx
@@ -11,7 +11,8 @@ citation:
       booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
       year    = {2020}
     }
-network-type: hypergraph
+network-type:
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
