--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -3,7 +3,9 @@ title: Walmart Trips
 source: https://www.cs.cornell.edu/~arb/data/walmart-trips/
 citation:
   - 10.1145/3366423.3380152
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
