--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -4,7 +4,8 @@ source: https://www.cs.cornell.edu/~arb/data/cat-edge-MAG-10/
 citation:
   - 10.1145/3366423.3380152
   - 10.1145/2740908.2742839
-network-type: hypergraph
+network-type:
+  - hypergraph
 tags:
   - edge labels
   - 'source: benson'
