--- a/src/datasets/NDC-classes.mdx
+++ b/src/datasets/NDC-classes.mdx
@@ -3,6 +3,9 @@ title: NDC Classes
 source: https://www.cs.cornell.edu/~arb/data/NDC-classes/
 citation:
 - 10.1073/pnas.1800683115
+network-type:
+- simplicial-complex
+- hypergraph
 tags:
 - undirected
 - temporal
