--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -5,7 +5,9 @@ citation:
   - 10.1126/sciadv.abh1303
   - 10.1093/pan/mpl002
   - 10.1016/j.socnet.2005.11.003
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
