--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -3,7 +3,9 @@ title: Trivago Clicks
 source: https://www.cs.cornell.edu/~arb/data/trivago-clicks/
 citation:
   - 10.1145/3394486.3403222
-network-type: hypergraph
+network-type:
+  - simplicial-complex
+  - hypergraph
 tags:
   - undirected
   - labelled nodes
