Cleanup tag colors

--- a/src/datasets/coauth-DBLP.mdx
+++ b/src/datasets/coauth-DBLP.mdx
@@ -3,6 +3,8 @@ title: coauth-DBLP
 source: https://www.cs.cornell.edu/~arb/data/coauth-DBLP/
 citation:
 - 10.1073/pnas.1800683115
+network-type:
+- hypergraph
 tags:
 - undirected
 - weighted
