--- a/src/datasets/congress-bills.mdx
+++ b/src/datasets/congress-bills.mdx
@@ -6,7 +6,8 @@ citation:
   - 10.1073/pnas.1800683115
   - 10.1093/pan/mpl002
   - 10.1016/j.socnet.2005.11.003
-network-type: temporal
+network-type:
+  - simplicial-complex
 tags:
   - social
   - "source: benson"
