--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -4,7 +4,8 @@ source: https://www.cs.cornell.edu/~arb/data/contact-high-school/
 citation:
   - 10.1073/pnas.1800683115
   - 10.1371/journal.pone.0136497
-network-type: temporal
+network-type:
+  - simplicial-complex
 related:
   - contact-primary-school
 tags:
