--- a/src/datasets/coauth-MAG-Geology.mdx
+++ b/src/datasets/coauth-MAG-Geology.mdx
@@ -4,6 +4,8 @@ source: https://www.cs.cornell.edu/~arb/data/coauth-MAG-Geology/
 citation:
 - 10.1073/pnas.1800683115
 - 10.1145/2740908.2742839
+network-type:
+- hypergraph
 tags:
 - undirected
 - weighted
