--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -4,7 +4,8 @@ source: https://www.cs.cornell.edu/~arb/data/contact-primary-school/
 citation:
   - 10.1073/pnas.1800683115
   - 10.1371/journal.pone.0023176
-network-type: temporal
+network-type:
+  - simplicial-complex
 tags:
   - social
   - temporal
